--- a/demo/index.html
+++ b/demo/index.html
@@ -33,57 +33,31 @@
 		<img src="img/weather/texture-drizzle-fg.png" />
 		<img src="img/weather/texture-drizzle-bg.png" />
 	</div>
-	<div class="container">
-		<header>
-			<h1>RIO DE JANEIRO - RJ</h1>
-<!-- 			<nav class="codrops-demos">
-				<a class="current-demo" href="index.html">Weather</a>
-				<a href="index2.html">Water</a>
-				<a href="index3.html">Video</a>
-			</nav> -->
+	<div id="main" class="container">
+	<script id="template" type="text/x-handlebars-template">
+  		<header>
+			<h1>{{city}}</h1>
 		</header>
 		<div class="slideshow">
 			<canvas width="1" height="1" id="container" style="position:absolute"></canvas>
-			<!-- Heavy Rain -->
-			<div class="slide" id="slide-1" data-weather="rain">
-				<div class="slide__element slide__element--date">Quarta-feira, 12 de Outubro de 2016</div>
-				<div class="slide__element slide__element--temp">12°<small>C</small></div>
-			</div>
-			<!-- Drizzle -->
-			<div class="slide" id="slide-2" data-weather="drizzle">
-				<div class="slide__element slide__element--date">Saturday, 25<sup>th</sup> of October 2043</div>
-				<div class="slide__element slide__element--temp">18°<small>C</small></div>
-			</div>
-			<!-- Sunny -->
-			<div class="slide" id="slide-3" data-weather="sunny">
-				<div class="slide__element slide__element--date">Monday, 26<sup>th</sup> of October 2043</div>
-				<div class="slide__element slide__element--temp">25°<small>C</small></div>
-			</div>
-			<!-- Heavy rain -->
-			<div class="slide" id="slide-5" data-weather="storm">
-				<div class="slide__element slide__element--date">Wednesday, 28<sup>th</sup> of October 2043</div>
-				<div class="slide__element slide__element--temp">20°<small>C</small></div>
-			</div>
-			<!-- Fallout (greenish overlay with slightly greenish/yellowish drops) -->
-			<div class="slide" id="slide-4" data-weather="fallout">
-				<div class="slide__element slide__element--date">Tuesday, 27<sup>th</sup> of October 2043</div>
-				<div class="slide__element slide__element--temp">34°<small>C</small></div>
-			</div>
+
+			{{#each forecasts}}
+  				<div class="slide" id="slide-{{@index}}" data-weather="{{dataWheater}}">
+					<div class="slide__element slide__element--date">{{longDate}}</div>
+					<div class="slide__element slide__element--temp">{{temperature}}°<small>{{../symbol}}</small></div>
+				</div>
+  			{{/each}}
+
 			<nav class="slideshow__nav">
-				<a class="nav-item" href="#slide-1"><i class="icon icon--rainy"></i><span>10/24</span></a>
-				<a class="nav-item" href="#slide-2"><i class="icon icon--drizzle"></i><span>10/25</span></a>
-				<a class="nav-item" href="#slide-3"><i class="icon icon--sun"></i><span>10/26</span></a>
-				<a class="nav-item" href="#slide-5"><i class="icon icon--storm"></i><span>10/28</span></a>
-				<a class="nav-item" href="#slide-4"><i class="icon icon--radioactive"></i><span>10/27</span></a>
+				{{#each forecasts}}
+					<a class="nav-item" href="#slide-{{@index}}"><i class="icon icon--{{iconWheater}}"></i><span>{{shortDate}}</span></a>
+				{{/each}}
 			</nav>
 		</div>
 		<p class="nosupport">Sorry, but your browser does not support WebGL!</p>
 	</div>
-	<!-- /container -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.amd.min.js"></script>
-	<script id="template" type="text/x-handlebars-template">
-	  <header><h1>{{city}}</h1></header>
 	</script>
+	<script src="js/handlebars.js"></script>
 	<script src="js/index.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
