--- a/demo/index.html
+++ b/demo/index.html
@@ -58,6 +58,7 @@
 	</div>
 	</script>
 	<script src="js/handlebars.js"></script>
+	<script src="js/forecast.js"></script>
 	<script src="js/index.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
